# My_INI

./: CMakeLists.txt  Makefile  README.md  basic_fun.cpp  example.ini  variables.txt
